aesthetic tweaks from earlier that were merged away lol Files modified - [Forms.variables.json,pom.xml,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -32,7 +32,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5_1">
-                        <wm-panel iconclass="" autoclose="outsideClick" name="panelFormReview" title="Form Review" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee">
+                        <wm-panel iconclass="wi wi-mode-edit" autoclose="outsideClick" name="panelFormReview" title="Form Review" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee">
                             <wm-layoutgrid name="layoutgrid3">
                                 <wm-gridrow name="gridrow9" padding=".5em unset">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
@@ -71,7 +71,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                        <wm-panel iconclass="" autoclose="outsideClick" name="panelForm" title="Form" class="panel-primary">
+                        <wm-panel iconclass="wi wi-list" autoclose="outsideClick" name="panelForm" title="Form Content" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn8"></wm-gridcolumn>
@@ -127,12 +127,12 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow35">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn82" padding=".5em unset">
-                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panelTagVendor" title="Tag Vendor" class="panel-primary" show="bind:Variables.CurrentForm.dataSet.data[$i].formTypes.vendorSelection">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panelTagVendor" title="Vendor Select" class="panel-primary" show="bind:Variables.CurrentForm.dataSet.data[$i].formTypes.vendorSelection">
                             <wm-layoutgrid name="layoutgrid12">
                                 <wm-gridrow name="gridrow38">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn87"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="10" name="gridcolumn88">
-                                        <wm-search placeholder="Search Vendor" dataset="bind:Variables.Vendors.dataSet" searchkey="vendor.companyName" displaylabel="vendor.companyName" datafield="All Fields" name="searchVendor"></wm-search>
+                                        <wm-search placeholder="Search by Company Name" dataset="bind:Variables.Vendors.dataSet" searchkey="vendor.companyName" displaylabel="vendor.companyName" datafield="All Fields" name="searchVendor"></wm-search>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn89"></wm-gridcolumn>
                                 </wm-gridrow>
@@ -146,7 +146,7 @@
                                 <wm-gridrow padding=".5em unset" name="gridrow40">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn93"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn94">
-                                        <wm-label padding="unset 0.5em" caption="bind:Widgets.searchVendor.datavalue.vendor.companyName+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address1+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address2+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.city+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.states.stateName+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.postalCode+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyPhone+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyEmail"
+                                        <wm-label padding="unset 0.5em" caption="bind:Widgets.searchVendor.datavalue.vendor.companyName+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address1+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address2+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.city+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.states.stateName+&quot; &quot;+Widgets.searchVendor.datavalue.vendor.postalCode+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyPhone+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyEmail"
                                         show="bind:Widgets.searchVendor.datavalue!=undefined" name="label24"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn95"></wm-gridcolumn>
@@ -154,7 +154,7 @@
                                 <wm-gridrow name="gridrow41">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn96"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn97">
-                                        <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" iconclass="wi wi-library-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="Variables.UpdateVendorForMasterForms.invoke()"
+                                        <wm-button class="btn-default btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="Variables.UpdateVendorForMasterForms.invoke()"
                                         name="buttonTagVendor"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn98"></wm-gridcolumn>
@@ -171,16 +171,18 @@
                             <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
                             <wm-tabpane name="tabpaneLocation" title="LOCATION" show="bind:showMaps">
                                 <wm-livegrid formlayout="dialog" name="livegridLocation">
-                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Gis2formsData.dataSet" navigation="Classic" name="gridLocation">
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Gis2formsData.dataSet" navigation="Classic" name="gridLocation" filtermode="multicolumn" exportformat="EXCEL">
+                                        <wm-grid-column binding="gisrecords.subdivisionId" caption="Subdivision No" type="integer" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
                                         <wm-grid-column binding="gisrecords.parcel" caption="Parcel" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
+                                        <wm-grid-column binding="gisrecords.lot" caption="Lot" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
+                                        <wm-grid-column binding="gisrecords.section" caption="Section" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
                                         <wm-grid-column binding="gisrecords.streetNumber" caption="Street Number" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
                                         <wm-grid-column binding="gisrecords.streetName" caption="Street Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
-                                        <wm-grid-column binding="gisrecords.unitNumber" caption="Unit" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
-                                        <wm-grid-column binding="gisrecords.subdivisionId" caption="Subdivision No" type="integer" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
-                                        <wm-grid-column binding="gisrecords.lot" caption="Lot" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
+                                        <wm-grid-column binding="gisrecords.city" caption="City" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
+                                        <wm-grid-column binding="gisrecords.inspectionZone" caption="Inspection Zone" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Gisrecords"></wm-grid-column>
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogAddGISRecord.open()" shortcutkey="" disabled="false"></wm-grid-action>
-                                        <wm-grid-row-action key="updaterow" display-name="View" show="true" class="btn-transparent" iconclass="" title="View" action="Widgets.dialogParcel.open()" disabled="false"></wm-grid-row-action>
+                                        <wm-grid-action key="addNewRow" display-name="Add Parcel" show="true" class="btn-primary" iconclass="wi wi-add" title="Add Parcel" action="Widgets.dialogAddGISRecord.open()" shortcutkey="" disabled="false"></wm-grid-action>
+                                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View" action="Widgets.dialogParcel.open()" disabled="false"></wm-grid-row-action>
                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                     <wm-liveform novalidate="false" errormessage="" title="Gis2forms Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Gis2formsData.dataSet" captionalign="left" captionposition="top" name="liveformLocation">
@@ -273,7 +275,7 @@
     <wm-view class="dialog-view" name="viewAddGISRecord">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Add Parcel" iconclass="wi wi-file-text" name="dialogAddGISRecord">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button3"></wm-button>
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button3" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-tabs name="tabsAddGISRecord">
                 <wm-tabpane name="tabpane8" title="BY ADDRESS">
@@ -303,7 +305,7 @@
                         <wm-gridrow name="gridrow23">
                             <wm-gridcolumn columnwidth="1" name="gridcolumn49"></wm-gridcolumn>
                             <wm-gridcolumn columnwidth="10" name="gridcolumn50" horizontalalign="center">
-                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" name="buttonAddByAddress" iconclass="wi wi-add-location" show="bind:Widgets.searchAddress.datavalue!=undefined" on-click="buttonAddByAddressClick($event, $scope)"></wm-button>
+                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" name="buttonAddByAddress" iconclass="wi wi-add" show="bind:Widgets.searchAddress.datavalue!=undefined" on-click="buttonAddByAddressClick($event, $scope)"></wm-button>
                             </wm-gridcolumn>
                             <wm-gridcolumn columnwidth="1" name="gridcolumn51"></wm-gridcolumn>
                         </wm-gridrow>
@@ -336,7 +338,7 @@
                         <wm-gridrow name="gridrow27">
                             <wm-gridcolumn columnwidth="1" name="gridcolumn61"></wm-gridcolumn>
                             <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn62">
-                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" iconclass="wi wi-add-location" name="buttonAddBySubdivision" show="bind:Widgets.searchSubdivision.datavalue!=undefined" on-click="buttonAddBySubdivisionClick($event, $scope)"></wm-button>
+                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" iconclass="wi wi-add" name="buttonAddBySubdivision" show="bind:Widgets.searchSubdivision.datavalue!=undefined" on-click="buttonAddBySubdivisionClick($event, $scope)"></wm-button>
                             </wm-gridcolumn>
                             <wm-gridcolumn columnwidth="1" name="gridcolumn63"></wm-gridcolumn>
                         </wm-gridrow>
@@ -369,7 +371,7 @@
                         <wm-gridrow name="gridrow31">
                             <wm-gridcolumn columnwidth="1" name="gridcolumn73"></wm-gridcolumn>
                             <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn74">
-                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" iconclass="wi wi-add-location" name="buttonAddByParcel" show="bind:Widgets.searchParcel.datavalue!=undefined" on-click="buttonAddByParcelClick($event, $scope)"></wm-button>
+                                <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" iconclass="wi wi-add" name="buttonAddByParcel" show="bind:Widgets.searchParcel.datavalue!=undefined" on-click="buttonAddByParcelClick($event, $scope)"></wm-button>
                             </wm-gridcolumn>
                             <wm-gridcolumn columnwidth="1" name="gridcolumn75"></wm-gridcolumn>
                         </wm-gridrow>
@@ -379,7 +381,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewParcel">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="LOCATION" iconclass="wi wi-file-text" name="dialogParcel">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Parcel Details" iconclass="wi wi-file-text" name="dialogParcel">
             <wm-layoutgrid name="layoutgrid10_1">
                 <wm-gridrow name="gridrow30_1">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn72_1">
@@ -423,7 +425,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions2">
-                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button7"></wm-button>
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button7" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
