- Changed Form Prefix label to Prefix - More requiredness Files modified - [EditForm.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -156,7 +156,7 @@
                                                     <wm-layoutgrid name="layoutgrid10_1">
                                                         <wm-gridrow name="gridrow43_2">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn68">
-                                                                <wm-form-field displayname="Title Prefix" widget="text" show="true" type="custom" name="titlePrefix" maxchars="255" placeholder="Enter title prefix" required="true"></wm-form-field>
+                                                                <wm-form-field displayname="Prefix" widget="text" show="true" type="custom" name="titlePrefix" maxchars="255" placeholder="Enter prefix" required="true"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow44_1">
